--- a/roles/nctest04/templates/remove_customer_10.xml
+++ b/roles/nctest04/templates/remove_customer_10.xml
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <config xmlns="urn:ietf:params:xml:ns:netconf:base:1.0">
   <configure xmlns="urn:nokia.com:sros:ns:yang:sr:conf">
     <service>
       <customer operation="remove">
-        <customer-id>10</customer-id>
+        <customer-name>alpha</customer-name>
       </customer>
     </service>
   </configure>
